--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head><meta charset="UTF-8"></head>
-    <body><p>Welcome!!</p></body>
+    <body>
+        <p>Welcome!!</p>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            var socket = io();
+            socket.on('connect', () => {
+                console.log("Connected to server");
+            });
+            socket.on('disconnect', () => {
+                console.log("Disconnected from server");
+            });
+        </script>
+    </body>
 </html>
